--- a/react-frontend/nginx/nginx.conf
+++ b/react-frontend/nginx/nginx.conf
@@ -23,7 +23,7 @@ server {
   }
   
   location /api {
-    proxy_pass        http://mywas:8080;
+    proxy_pass        http://mywas:8080/;
     proxy_set_header    Host               $host;
     proxy_set_header    X-Real-IP          $remote_addr;
     proxy_set_header    X-Forwarded-For 
