--- a/react-frontend/nginx/nginx.conf
+++ b/react-frontend/nginx/nginx.conf
@@ -5,33 +5,8 @@ server {
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
-    autoindex on;
-    set $fallback_file /index.html;
-    if ($http_accept !~ text/html) {
-        set $fallback_file /null;
-    }
-    if ($uri ~ /$) {
-        set $fallback_file /null;
-    }
-    try_files $uri $fallback_file;
-
-    add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-    add_header 'Access-Control-Allow-Credentials' 'true' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-
-  }
-  
-  location /api {
-    proxy_pass        http://mywas:8080/;
-    proxy_set_header    Host               $host;
-    proxy_set_header    X-Real-IP          $remote_addr;
-    proxy_set_header    X-Forwarded-For 
-    $proxy_add_x_forwarded_for;
-    proxy_set_header    X-Forwarded-Host   $host;
-    proxy_set_header    X-Forwarded-Server $host;
-    proxy_set_header    X-Forwarded-Port   $server_port;
-    proxy_set_header    X-Forwarded-Proto  $scheme;    
+    
+    try_files $uri $uri/ /index.html;
   }
 
   error_page   500 502 503 504  /50x.html;
@@ -39,5 +14,5 @@ server {
   location = /50x.html {
     root   /usr/share/nginx/html;
   }
+  
 }
-
